<resources>
    <string name="app_name">QrCode Scanner</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_history">History</string>
    <string name="title_scan">Scan</string>
    <string name="title_share">Share</string>
    <string name="turn_on_flashlight">Turn on flashlight</string>
    <string name="turn_off_flashlight">Turn off flashlight</string>
    <string name="navigation_delete">Delete</string>
    <string name="navigation_layout">Sort</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="msg_require_camera">Please apply camera permission to scan barcode!</string>
    <string name="title_turn_on_flash">Turn on flash</string>
    <string name="msg_put_barcode_to_scan">Put barcode to rectangle to scan!</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="button_ok">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_web_search">Web search</string>
    <string name="iv_barcode">Result image</string>
    <string name="title_share_intent">Share via</string>

    <string name="action_settings">Settings</string>
    <string name="title_turn_off_flash">Turn of flash</string>
    <string name="ic_flash">Icon flash</string>
    <string name="msg_notice_no_data_scan">No data is detected.\\nTouch to rescan!</string>
    <string name="msg_barcode_null">Data is not detected!</string>
    <string name="lb_scan">Scan</string>
    <string name="lb_history">History</string>
    <string name="navigation_search">Search</string>
    <string name="title_result">Result</string>
    <string name="navigation_copy">Copy</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_about">About</string>
    <string name="pref_summary_about">QrCode Scanner app is used to scan Barcode and QrCode,
        it\'s simple app use Zxing library.</string>
    <string name="pref_app_version">Version 1.0.1</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_summary_support">Feedback</string>
    <string name="pref_title_send_feedback">Feedback</string>
    <string name="pref_project_url">You can view this project in GitHub:
        \n https://github.com/binhdk/BarCode-Scanner</string>
    <string name="pref_title_project_url">View project in GitHub</string>
    <string name="pref_github_url">https://github.com/binhdk/BarCode-Scanner</string>
    <string name="pref_beep_scanned">Beep  when scan success</string>
</resources>
