<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="beep_scan_success"
            android:title="@string/pref_beep_scanned" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/pref_summary_about" />

        <Preference
            android:summary="@string/pref_app_version"
            android:title="@string/pref_title_version" />

        <Preference
            android:key="key_send_feedback"
            android:summary="@string/pref_summary_support"
            android:title="@string/pref_title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/pref_project_url"
            android:title="@string/pref_title_project_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_github_url" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
